# auditory-intention-decoding-data-analysis

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
auditory_intention_decoding_data_analysis/: __init__.py  config.py  dataset.py  features.py  model.py  plots.py
auditory_intention_decoding_data_analysis/modeling/: predict.py  train.py
auditory_intention_decoding_data_analysis/models/: build_samples.py  eegnet.py  eegnet2.py  permutation_analysis.py  redo_eegnet_plot.py  utils.py
auditory_intention_decoding_data_analysis/plots/: plot_erp.py  time_frequency.py
