[tool.poetry]
name = "auditory-intention-decoding-data-analysis"
version = "0.1.0"
description = ""
authors = ["Michal Robert Zak"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
mne = "^1.7.1"
mne-qt-browser = "^0.6.3"
PyQt6 = "^6.7.0"
numpy = "^2.0.0"
matplotlib = "^3.9.0"
typer = "^0.12.3"
loguru = "^0.7.2"
python-dotenv = "^1.0.1"
tqdm = "^4.66.4"
braindecode = "^0.8.1"
scikit-learn = "^1.5.0"
skorch = "^1.0.0"
torch = "^2.3.1"
torchvision = "^0.18.1"
torchaudio = "^2.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
