[tool.poetry]
name = "auditory-intention-decoding-data-analysis"
version = "0.1.0"
description = ""
authors = ["Michal Robert Zak"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.8"
numpy = "~1.18"
tensorflow = "~2.3"
mne = "~1.5"
mne-qt-browser = "0.6.1"
pyqt6 = "^6.7.0"
matplotlib = "~3.5"
typer = "^0.12.3"
loguru = "^0.7.2"
python-dotenv = "^1.0.1"
tqdm = "^4.66.4"
scikit-learn = "~1.3"
pyriemann = "^0.6"
protobuf = "~3.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
